# cg-solver

./: .gitignore  CMakeLists.txt  README.md
apps/: cg_benchmark.cpp  cg_driver.cpp
include/cg/: cg.hpp  linalg.hpp  sparse.hpp
src/: cg.cpp  cg_gpu.cu  cg_gpu_stub.cpp  sparse_csr.cpp
